docs/pages/versions/v56.0.0/sdk/ui/jetpack-compose/badge.mdx
---
title: Badge
description: A Jetpack Compose Badge component for displaying status indicators and counts.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { Diagram } from '~/ui/components/Diagram';

Expo UI Badge matches the official Jetpack Compose [`Badge`](https://developer.android.com/develop/ui/compose/components/badges) API. It renders as a small colored indicator dot, or with content such as a count number.

<div className="mx-auto w-fit [&_img]:max-h-[360px] [&_img]:w-auto">
  <Diagram
    source="/static/images/expo-ui/badge/android-light.webp"
    darkSource="/static/images/expo-ui/badge/android-dark.webp"
    alt="Material 3 badges showing count and dot indicators on icons"
    disableSrcSet
  />
</div>

## Installation

<APIInstallSection />

## Usage

### Indicator dot

A badge with no children renders as a small dot indicator.

```tsx BadgeDot.tsx
import { Host, Badge } from '@expo/ui/jetpack-compose';

export default function BadgeDot() {
  return (
    <Host matchContents>
      <Badge />
    </Host>
  );
}
```

### Badge with count

Pass a `Text` child to display a number or label.

```tsx BadgeCount.tsx
import { Host, Badge, Text } from '@expo/ui/jetpack-compose';

export default function BadgeCount() {
  return (
    <Host matchContents>
      <Badge containerColor="#EF5350" contentColor="#FFFFFF">
        <Text>3</Text>
      </Badge>
    </Host>
  );
}
```

## API

```tsx
import { Badge } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/badge" apiName="Badge" />
