docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/badge.mdx
---
title: Badge
description: A Jetpack Compose Badge component for displaying status indicators and counts.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Badge matches the official Jetpack Compose [`Badge`](https://developer.android.com/develop/ui/compose/components/badges) API. It renders as a small colored indicator dot, or with content such as a count number.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/badge/android-light.webp"
  darkSrc="/static/images/expo-ui/badge/android-dark.webp"
  alt="Material 3 badges showing count and dot indicators on icons"
/>

## Installation

<APIInstallSection />

## Usage

### Indicator dot

A badge with no children renders as a small dot indicator.

<ComponentExample
  title="BadgeDot.tsx"
  src="/static/images/expo-ui/examples/badge-dot-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/badge-dot-android-dark.webp"
  alt="A small red Material 3 badge dot on an otherwise empty screen">

```tsx
import { Host, Badge } from '@expo/ui/jetpack-compose';

export default function BadgeDot() {
  return (
    <Host matchContents>
      <Badge />
    </Host>
  );
}
```

</ComponentExample>

### Badge with count

Pass a `Text` child to display a number or label.

<ComponentExample
  title="BadgeCount.tsx"
  src="/static/images/expo-ui/examples/badge-count-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/badge-count-android-dark.webp"
  alt="A red circular badge showing the count 3 in white">

```tsx
import { Host, Badge, Text } from '@expo/ui/jetpack-compose';

export default function BadgeCount() {
  return (
    <Host matchContents>
      <Badge containerColor="#EF5350" contentColor="#FFFFFF">
        <Text>3</Text>
      </Badge>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Badge } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/badge"
  apiName="Badge"
/>
